# news_bot

./: .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: keyboard_builder.py  main.py  settings.py
utils/: __init__.py  currencies_service.py  news_service.py
